<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="219dp"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagenLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/imgLogo"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/usuario"
            android:drawableLeft="@drawable/ic_action_persona"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:drawableLeft="@drawable/ic_action_password"
            android:inputType="textPassword" />

        <androidx.cardview.widget.CardView
            android:layout_width="245dp"
            android:layout_height="50dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="50dp"
            android:onClick="verificarUsuario"
            app:cardBackgroundColor="#57FFFFFF"
            app:cardCornerRadius="25dp"
            app:cardElevation="100dp">

            <TextView
                android:id="@+id/autenticar"
                android:layout_width="96dp"
                android:layout_height="22dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:text="@string/autenticar" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/registarUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="132dp"
            android:layout_marginTop="50dp"
            android:onClick="formularioRegistrar"
            android:shadowColor="@android:color/primary_text_dark"
            android:text="@string/registar_aqu"
            android:textSize="15dp" />

    </LinearLayout>


</LinearLayout>