<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".Registrar">

    <LinearLayout
        android:layout_width="459dp"
        android:layout_height="72dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textoColor"
            android:layout_width="413dp"
            android:layout_height="48dp"
            android:background="#0FFFFFFF"
            android:gravity="center"
            android:text="@string/formulario_de_registro"
            android:textColor="#8C2323"
            android:textColorLink="#FD2C2C"
            app:drawableTint="#872087"
            tools:layout_editor_absoluteX="109dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="392dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="53dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usuarioRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="12dp"
                android:text="@string/usuario_registro"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/campoUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="@string/usuarioCampo"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usuarioContraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="12dp"
                android:text="@string/contrase_a"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/campoPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"

                android:hint="@string/password"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/ciUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="12dp"
                android:text="CI:"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ciUsuarioCampo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="@string/ci"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/campoNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:layout_marginRight="12dp"

                android:text="@string/nombre" />

            <EditText
                android:id="@+id/campoNombreUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="@string/nombre_usuario"
                android:inputType="textPersonName" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/campoApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:layout_marginRight="12dp"

                android:text="Apellido:" />

            <EditText
                android:id="@+id/campoApellidoUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="Apellido..."
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/ovalo"
            android:onClick="registrarUsuario"
            android:text="Ingresar"
            android:textColor="#574E4E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="432dp" />
    </LinearLayout>

</LinearLayout>