<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".Login1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="219dp"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagenLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/imgLogo"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/usuario"
            android:drawableLeft="@drawable/ic_action_persona"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:onClick="verificarUsuario"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:drawableLeft="@drawable/ic_action_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="#B4ACC5"

            android:onClick="verificarUsuario"
            android:text="@string/ingresar" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:onClick="formularioRegistrar"
            android:layout_gravity="center"
            android:text="Registrar Aquí" />


    </LinearLayout>





</LinearLayout>